--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!--  section 1 || Image section -->
     <!-- This section of the signup page contains a background image and with platform branding as overlay text -->
             <div class="info flex">
-               <img src="/assets/images/odin-lined.png" alt="Odin's Face">
+               <img src="./assets/images/odin-lined.png" alt="Odin's Face">
                <h1>Odin</h1>
             </div>
         </section>
